...
    return Scaffold(
      backgroundColor: kcBackgroundColor,
      body: Center(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            RichText( text: const TextSpan(children: [TextSpan(text: 'Mero',style: TextStyle(
                  fontSize: 40,
                  fontWeight: FontWeight.w900,
                  color: kcPrimaryTextColor),), TextSpan(text: 'TV',style: TextStyle(
                  fontSize: 40,
                  fontWeight: FontWeight.w900,
                  color: kcPrimaryColor),)])
              
              
            ),
...
